--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "upload": "npm run build && firebase deploy --only hosting",
-    "sync": "cd ../capacitor-twitterx-login && npm run build && cd ../pixeltronic-frontend && npm i && npm run build && npx cap sync && npx cap copy"
+    "sync": "npm i && npm run build && npx cap sync && npx cap copy"
   },
   "dependencies": {
     "@capacitor/android": "^5.4.1",
