--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@capacitor/android": "^5.4.1",
     "@capacitor/cli": "^5.4.1",
     "@capacitor/core": "^5.4.1",
-    "@capacitor/ios": "^5.4.1",
     "@capacitor/device": "^5.0.6",
+    "@capacitor/ios": "^5.4.1",
     "@vueuse/core": "^10.4.1",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "pinia": "^2.1.6",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
