--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixeltronics",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -21,31 +21,28 @@
     "@capacitor/core": "^5.4.1",
     "@capacitor/device": "^5.0.6",
     "@capacitor/ios": "^5.4.1",
-    "@vueuse/core": "^10.4.1",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "pinia": "^2.1.6",
-    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "vuetify": "^3.3.16"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@mdi/font": "^7.2.96",
     "@nightwatch/vue": "0.4.5",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.2",
     "@types/nightwatch": "^2.3.25",
-    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue": "^4.4.0",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
-    "autoprefixer": "^10.4.15",
-    "chromedriver": "^116.0.0",
-    "eslint": "^8.49.0",
+    "autoprefixer": "^10.4.16",
+    "chromedriver": "^117.0.3",
+    "eslint": "^8.51.0",
     "eslint-plugin-vue": "^9.17.0",
     "geckodriver": "^4.2.1",
     "jsdom": "^22.1.0",
@@ -56,9 +53,9 @@
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.6",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.4",
-    "vue-tsc": "^1.8.11",
+    "vite": "^4.4.11",
+    "vitest": "^0.34.6",
+    "vue-tsc": "^1.8.18",
     "wait-on": "^7.0.1"
   }
 }
