--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ionic/pwa-elements": "^3.2.2",
     "@quasar/extras": "^1.16.7",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
     "pinia": "^2.1.6",
     "quasar": "^2.12.7",
