--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "author": "gerrithoskins <gerrit.hoskins@gmail.com>",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
-    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
+    "lint-fe": "eslint --ext .js,.ts,.vue ./",
+    "format-fe": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev -d",
-    "build": "quasar build",
+    "dev-fe": "quasar dev -d",
+    "build-fe": "quasar build",
     "upload": "quasar build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@ionic/pwa-elements": "^3.2.2",
     "@quasar/extras": "^1.16.7",
+    "@types/crypto-js": "^4.1.2",
     "@vueuse/core": "^10.5.0",
     "axios": "^1.5.1",
+    "crypto-js": "^4.1.1",
     "pinia": "^2.1.6",
     "quasar": "^2.12.7",
     "vue": "^3.3.4",
@@ -25,10 +27,10 @@
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.6.2",
-    "@types/node": "^20.8.3",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@vue/devtools": "^6.5.0",
+    "@types/node": "^20.8.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "@vue/devtools": "^6.5.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
