--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@capacitor/preferences": "^5.0.6",
+    "@supabase/supabase-js": "^2.38.4",
     "@types/crypto-js": "^4.1.3",
     "@vueuse/core": "^10.5.0",
-    "axios": "^1.5.1",
+    "@vueuse/integrations": "^10.5.0",
+    "axios": "^1.6.0",
     "crypto-js": "^4.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.7",
