--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,7 +17,8 @@
     },
     "types": [
       "vite/client",
-      "jest"
+      "jest",
+      "@types/**/*",
     ],
     "include": [
       "src/**/*.ts",
