--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "dev-fe": "vite",
     "build-fe": "vite build",
     "test:unit": "vitest",
-    "upload": "run-p type-check \"build-only {@}\" -- && firebase deploy --only hosting"
+    "upload": "vite build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@capacitor/preferences": "^5.0.6",
     "@supabase/supabase-js": "^2.38.4",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/crypto-js": "^4.1.3",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.5.0",
@@ -40,15 +41,17 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-vue": "^9.18.0",
+    "eslint-plugin-vue": "^9.18.1",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22"
+    "vue-tsc": "^1.8.22",
+    "sass": "^1.69.5"
   }
 }
