--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/crypto-js": "^4.1.3",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.5.0",
+    "async-validator": "^4.2.5",
     "axios": "^1.6.0",
     "crypto-js": "^4.2.0",
     "pinia": "^2.1.7",
@@ -47,11 +48,11 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22",
-    "sass": "^1.69.5"
+    "vue-tsc": "^1.8.22"
   }
 }
