--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "async-validator": "^4.2.5",
     "axios": "^1.6.0",
     "crypto-js": "^4.2.0",
+    "express": "^4.18.2",
     "pinia": "^2.1.7",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
@@ -32,9 +33,9 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.4",
-    "@types/node": "^20.8.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/devtools": "^6.5.1",
     "@vue/test-utils": "^2.4.1",
